--- a/app-of-apps/root-app/my-application.yml
+++ b/app-of-apps/root-app/my-application.yml
@@ -13,7 +13,7 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+    repoURL: https://github.com/manuelnucci/gitops-cert-level-2-examples.git
     targetRevision: HEAD
     path: ./app-of-apps/my-app-list
    
@@ -23,7 +23,7 @@ spec:
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: argocd
 
   # Sync policy
   syncPolicy:
